2012-08-04 Stefan Bidigaray <stefanbidi@gmail.com>

	* Tests/CFTesting.h: Implement a version of pass() and PASS() so
	that testing of Corebase types are not dependent of ObjC classes.

2012-08-04 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFPropertyList.h:
	* Source/CFPropertyList.m: Replace ObjC wrapper with a C implementation.
	* Source/CFPropertyList.c: Stub implementation for CFPropertyList.
	functions.

2012-08-04 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFXMLNode.c: Rearrange __CFXMLNode structure.
	* Source/CFXMLParser.c: Implement CFXMLParserClass and
	CFXMLParserCreate().

2012-07-26 Adam Fedor <fedor@gnu.org>

	* Version 0.1

2012-07-21 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStringFormat.c: Use pointer value when formatting a pointer.

2012-07-19 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStringFormat.c: Always format floating numbers and
	endianness problem in character formatting.

2012-07-17 Stefan Bidigaray <stefanbidi@gmail.com>

	* configure.ac:
	* configure: Fix typo.
	* Source/GSPrivate.h: Define ObjC macros for libobjc2, too.
	* Tests/CFString/create.m: Fix for big endian machines.
	* Tests/CFNumber/general.m: Be more verbose.

2012-07-17 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/config.h.in:
	* configure.ac:
	* configure: Correctly detect libobjc2 on some systems.
	* Source/CFLocal.c: Don't search past the end of the _kCFLocaleValues
	array.

2012-07-16 Stefan Bidigaray <stefanbidi@gmail.com>

	* configure.ac:
	* configure: Use gnustep-config to find include directories.
	* COPYING:
	* COPYING.LIB:
	* INSTALL:
	* README: Add distribution files.

2012-06-08 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFCharacterSet.c: Avoid memory leak.
	* Source/CFString.c: Simplify constant string generation.
	* Source/CFTimeZone.c: Fix bug in CFTimeZoneGetDaylightSavingTimeOffset().

2012-06-07 Stefan Bidigaray <stefanbidi@gmail.com>
